--- a/nextShop/index.html
+++ b/nextShop/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="">
 
   <title>nextShop</title>
-  
+
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="css/shop-homepage.css" rel="stylesheet">
 
@@ -29,27 +29,29 @@
         <li class="nav-item active">
           <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Dropdown
+            Categorías
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
+            <a class="dropdown-item" href="#">Notebooks y PC</a>
+            <a class="dropdown-item" href="#">Celulares y Tablets</a>
+            <a class="dropdown-item" href="#">SmartTV y Audio</a>
+            <a class="dropdown-item" href="#">Gaming</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Something else here</a>
+            <a class="dropdown-item" href="#">Tech Home</a>
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+          <a class="nav-link" href="#">Contacto</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">F.A.Q.</a>
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        <input class="form-control mr-sm-2" type="search" placeholder="" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
       </form>
     </div>
   </nav>
@@ -61,11 +63,13 @@
 
       <div class="col-lg-3">
 
-        <h1 class="my-4">Descubrí</h1>
+        <h3 class="my-4">Descubrí</h3>
         <div class="list-group">
-          <a href="#" class="list-group-item">Category 1</a>
-          <a href="#" class="list-group-item">Category 2</a>
-          <a href="#" class="list-group-item">Category 3</a>
+          <a href="#" class="list-group-item">Notebooks y PC</a>
+          <a href="#" class="list-group-item">Celulares y Tablets</a>
+          <a href="#" class="list-group-item">SmartTV y Audio</a>
+          <a href="#" class="list-group-item">Gaming</a>
+          <a href="#" class="list-group-item">Tech Home</a>
         </div>
 
       </div>
@@ -92,11 +96,11 @@
           </div>
           <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
+            <span class="sr-only">Anterior</span>
           </a>
           <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
+            <span class="sr-only">Siguiente</span>
           </a>
         </div>
 
@@ -107,9 +111,9 @@
               <a href="#"><img class="card-img-top" src="img/artA-artHome-700x400.png" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Item One</a>
+                  <a href="#">Artículo A</a>
                 </h4>
-                <h5>$24.99</h5>
+                <h5>$3.450</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
               </div>
               <div class="card-footer">
@@ -123,9 +127,9 @@
               <a href="#"><img class="card-img-top" src="img/artB-artHome-700x400.png" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Item Two</a>
+                  <a href="#">Artículo B</a>
                 </h4>
-                <h5>$24.99</h5>
+                <h5>$21.500</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur! Lorem ipsum dolor sit amet.</p>
               </div>
               <div class="card-footer">
@@ -139,9 +143,9 @@
               <a href="#"><img class="card-img-top" src="img/artC-artHome-700x400.png" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Item Three</a>
+                  <a href="#">Artículo C</a>
                 </h4>
-                <h5>$24.99</h5>
+                <h5>$2.400</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
               </div>
               <div class="card-footer">
@@ -155,9 +159,9 @@
               <a href="#"><img class="card-img-top" src="img/artD-artHome-700x400.png" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Item Four</a>
+                  <a href="#">Artículo D</a>
                 </h4>
-                <h5>$24.99</h5>
+                <h5>$6.500</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
               </div>
               <div class="card-footer">
@@ -171,9 +175,9 @@
               <a href="#"><img class="card-img-top" src="img/artE-artHome-700x400.png" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Item Five</a>
+                  <a href="#">Artículo E</a>
                 </h4>
-                <h5>$24.99</h5>
+                <h5>$8.500</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur! Lorem ipsum dolor sit amet.</p>
               </div>
               <div class="card-footer">
@@ -187,9 +191,9 @@
               <a href="#"><img class="card-img-top" src="img/artF-artHome-700x400.png" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Item Six</a>
+                  <a href="#">Artículo F</a>
                 </h4>
-                <h5>$24.99</h5>
+                <h5>$7.200</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
               </div>
               <div class="card-footer">
